--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ data/
 results/
 scripts/__pycache__
 notebooks/.ipynb_checkpoints/
+notebooks/1_building_and_annotating_the_atlas_core/.ipynb_checkpoints/
+notebooks/2_modeling_of_covariates_and_GWAS_analysis/.ipynb_checkpoints/
