--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .ipynb_checkpoints/
 data
 data_GWAS_non_public/
-results/
+results
 results.zip
 supporting_files/celltype_reannotation/old_versions_gitignore/
 supporting_files/HLCA_author_overview.csv
